tests/baselines/reference/isLiteral1.errors.txt
isLiteral1.ts(1,17): error TS1121: Octal literals are not allowed. Use the syntax '0o2343'.


==== isLiteral1.ts (1 errors) ====
    var x: number = 02343;
                    ~~~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o2343'.